[package]
name = "geonetworking"
version = "0.3.0-rc.1"
edition = "2021"
authors = ["Kevin Westphal<westphal@consider-it.de>", "consider it GmbH"]
keywords = ["its", "v2x", "etsi", "geonetworking"]
license = "MIT"
categories = ["no-std", "encoding"]
description = "Tools for encoding and decoding a geonetworking header according to EN 302 636-4-1 v1.3.1"
readme = "./README.md"
repository = "https://github.com/consider-it/geonetworking"
homepage = "https://github.com/consider-it/geonetworking"
documentation = "https://docs.rs/geonetworking"

[features]
default = ["json", "validate"]
json = ["dep:serde_json", "serde", "bytes/serde"]
validate = ["ecdsa", "p256", "p384", "bp256", "bp384", "sha2", "sm2", "sm3"]

[dependencies]
bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
bytes = { version = "1.10", default-features = false }
nom = { version = "7.1", default-features = false, features = ["alloc"] }
nom-bitvec = { package = "bitvec-nom2", version = "0.2.1" }
num = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }

# "json" feature dependencies
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }

# "validate" feature dependencies
ecdsa = { version = "=0.17.0-rc.14", default-features = false, features = ["algorithm"], optional = true }
p256  = { version = "=0.14.0-rc.6",  default-features = false, features = ["ecdsa"], optional = true }
p384  = { version = "=0.14.0-rc.6",  default-features = false, features = ["ecdsa"], optional = true }
bp256 = { version = "=0.14.0-rc.6",  default-features = false, features = ["ecdsa", "arithmetic", "sha256"], optional = true }
bp384 = { version = "=0.14.0-rc.6",  default-features = false, features = ["ecdsa", "arithmetic", "sha384"], optional = true }
sm2   = { version = "=0.14.0-rc.6",  default-features = false, features = ["dsa", "arithmetic"], optional = true }
sha2  = { version = "=0.11.0-rc.4",  default-features = false, optional = true }
sm3   = { version = "=0.5.0-rc.4",   default-features = false, optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
